@@ -30,8 +30,9 @@ manipulate.  If an additional <I>value</I> parameter exists,
 then the field will be set to <I>value</I>, otherwise
 the current value of the field is returned.  Multiple fields may be
 set via additional parameters by alternating field signatures and
-values. A full field signature is is required to specify shadowed
-fields of superclasses.
+values. To access a shadowed field in a superclass, a full field
+signature consisting of the field name followed by the superclass
+name must be provided as the <I>field</I> argument.
 
 <P>
 
